--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/index.scss">
-    <title>Facebook - Clone</title>
+    <title>Facebook - clone</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
